force-app/main/default/objects/Rosa__c/Rosa__c.object-meta.xml
<CustomObject>
    <label>Rosa</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rosa Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rosa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>