force-app/main/default/objects/Rosa__c/fields/CognomeGiocatore__c.field-meta.xml
<CustomField>
    <fullName>CognomeGiocatore__c</fullName>
    <label>CognomeGiocatore</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>