force-app/main/default/objects/Rosa__c/fields/Eta__c.field-meta.xml
<CustomField>
    <fullName>Eta__c</fullName>
    <label>Eta</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>