force-app/main/default/objects/Rosa__c/fields/NomeGiocatore__c.field-meta.xml
<CustomField>
    <fullName>NomeGiocatore__c</fullName>
    <label>NomeGiocatore</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>