force-app/main/default/objects/Rosa__c/fields/Ruolo__c.field-meta.xml
<CustomField>
    <fullName>Ruolo__c</fullName>
    <label>Ruolo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Att</fullName>
            </value>
            <value>
                <fullName>Ccr</fullName>
            </value>
            <value>
                <fullName>Dif</fullName>
            </value>
            <value>
                <fullName>Por</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>